--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -42,12 +42,12 @@
 }
 .img1 {
  /* background: url('/assets/img/img-represent.jpg'); */
- /* background-image:(var(--img-represent)); */
  width: auto;
  height:350px;
  background-size: cover;
  background-attachment: fixed;
   /* ACA LE PUEDO DAR CON !IMPORTANT */
+  /* ahora uso el view child de angular con element ref para hacer estos cambios en la img */
 }
 
 
@@ -100,6 +100,7 @@
     background-color: rgb(53, 53, 53);
     text-align: center;
     border-radius: 3%;
+    z-index: 1;
   }
 
 
