--- a/src/app/components/proyectos/proyectos.component.css
+++ b/src/app/components/proyectos/proyectos.component.css
@@ -64,7 +64,7 @@
   color: white;
 }
     
- img{
+ .bg-sub{
     box-shadow: 2px 2px 8px 1px rgba(2,247,137,0.9);
     -webkit-box-shadow: 2px 2px 8px 1px rgba(2,247,137,0.9);
     -moz-box-shadow: 2px 2px 8px 1px rgba(2,247,137,0.9);
