--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -18,7 +18,7 @@
       <div class="card-body bg-sub rounded bg-dark bg-gradient text-white">
         <div >
           <div class="card-title text-center display-6">{{miPortfolio.proNombre}}</div>
-          <div class="card-subtitle  mb-2 text-white">{{miPortfolio.proFecha}}</div>
+          <div class="card-subtitle  mb-2 text-white">Fecha de finalización: {{miPortfolio.proFecha}}</div>
         </div>
         <a href="{{miPortfolio.proLink}}" target="_blank" class="d-flex align-content-center d-flex justify-content-center">  
           <img  class="img-fluid mx-auto rounded" src="{{miPortfolio.proImg}}"  alt="Imagen del proyecto">
