--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,135 +1,258 @@
-         <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
-            <div *ngIf="oculto" class="pequecontenedor col">
-            <input type="text" placeholder="User" formControlName="nombreUsuario" class="form-control" id="usuario">
-            <div *ngIf="User?.errors && User?.touched">
-                <p *ngIf="User?.hasError('required')" class="text-danger texto-errorUser">
-                    El usuario es requerido.
-                </p>
-                <p *ngIf="User?.errors?.['minlength']" class="text-danger texto-errorUser">
-                    Ingresa más de 8 caracteres.
-                </p>
-            </div>
-            <input type="password" placeholder="contraseña" formControlName="password" class="form-control"
-            id="password">
-            <div *ngIf="Password?.errors && Password?.touched">
-                <p *ngIf="Password?.hasError('required')" class="text-danger texto-errorContraseña">
-                    La contraseña es requerida.
-                </p>
-                <p *ngIf="Password?.errors?.['minlength']" class="text-danger texto-errorContraseña">
-                    Ingresa más de 8 caracteres.
-                </p>
-            </div>
-            <button type="submit" class="userboton" *ngIf="!sgf.canActivate()">Ingresar</button>
-            <button type="submit" class="userboton mt-2" *ngIf="sgf.canActivate()"
-            (click)="offSesion($event)">Cerrar Sesión</button>
-        </div>
-    </form>
-    
 <div class="container-flex">
-    <a 
-        href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa "
-        target="_blank">
-        <img class="img-Arg" src="assets/img/ArgPrograma.png" alt="arg" />
-    </a>
-    
-    <ul class="d-flex ul__Icons list-unstyled inline-row">
-        <li>
-     <a href="https://wa.me/5492984788433" class="main-menu__link fa-brands fa-whatsapp" target="_blank"></a>
- </li>
- <li >
-     <a href="https://www.linkedin.com/in/claudio-miguel-olivera-gonzalez/"  target="_blank" class="main-menu__link fa-brands fa-linkedin"></a>
- </li>
-<!--  <li >
-     <a href="#" class="main-menu__link fa-brands fa-instagram" target="_blank" ></a>
- </li> -->
- <li >
-     <a href="https://github.com/Claudio-Olivera" class="main-menu__link fa-brands fa-github" target="_blank" ></a>
- </li>
- <li >
-     <a id="enviar" class="main-menu__link fa-solid fa-user" type="submit"
-     [className]="!sgf.canActivate()?'main-menu__link fa-solid fa-user':'main-menu__link fa-solid fa-arrow-right-from-bracket'"
-     (click)="mostrar()"></a>
- </li>
-</ul>
-</div>
+  <a
+    href="https://www.argentina.gob.ar/produccion/transformacion-digital-y-economia-del-conocimiento/argentina-programa "
+    target="_blank"
+  >
+    <img class="img-Arg" src="assets/img/ArgPrograma.png" alt="arg" />
+  </a>
 
+  <ul class="d-flex ul__Icons list-unstyled inline-row">
+    <li>
+      <a
+        href="https://wa.me/5492984788433"
+        class="main-menu__link fa-brands fa-whatsapp"
+        target="_blank"
+      ></a>
+    </li>
+    <li>
+      <a
+        href="https://www.linkedin.com/in/claudio-miguel-olivera-gonzalez/"
+        target="_blank"
+        class="main-menu__link fa-brands fa-linkedin"
+      ></a>
+    </li>
+    <!--  <li >
+        <a href="#" class="main-menu__link fa-brands fa-instagram" target="_blank" ></a>
+    </li> -->
+    <li>
+      <a
+        href="https://github.com/Claudio-Olivera"
+        class="main-menu__link fa-brands fa-github"
+        target="_blank"
+      ></a>
+    </li>
+    <li *ngIf="!sgf.canActivate()">
+      <a
+        id="enviar"
+        class="main-menu__link fa-solid fa-user"
+        type="submit"
+        (click)="mostrar()"
+      ></a>
+    </li>
 
-<div class="container-flex">
-    <div class="img1" #img1> <!-- le di background usando @viewchild en ts -->
-        <a *ngIf="sgf.canActivate()&&miPortfolio.imgRepresentativa!=null" class="btn btn-outline-light align-self-start botonEdit__represent" role="button"
-        data-bs-target="#representModal" data-bs-toggle="modal"><i class="fa-solid fa-pencil"></i></a>
-        <div class="container-fluid d-flex justify-content-center" >    
-            <div class="">
-                <h1 class="text-center text-white display-5 titulo mt-3">Claudio Miguel Olivera González</h1>
-                <h2 class="text-center text-white display-6 titulo">Full Stack Developer Junior</h2>
-                <!-- NOTA: Podria haber utilizado mas las interpolaciones con los datos correspondientes, pero preferí no hacerlo, ya que por ejemplo para el nombre que se encuentra en header component queria que se viera siempre independientemente de que llegara o no el dato de la db (evitando asi que quedara el campo vacío en caso de que no hubiera dato.) -->
-            </div>
-        </div>
-        
-        <div class="container-flex">
-            <div class="d-flex justify-content-center">
-                <img class="img-Perfil rounded-circle mb-4 align-self-center" *ngIf="miPortfolio.imgPerfil!=null" src={{miPortfolio.imgPerfil}}/>
-                <!--inico del boton editar img-->
-                <div class="d-flex justify-content-center position-absolute">
-                    <a *ngIf="sgf.canActivate()&&miPortfolio.imgPerfil!=null" class="align-self-center btn btn-outline-light hover__boton" role="button"
-                    data-bs-target="#exampleModal" data-bs-toggle="modal"><i class="fa-solid fa-pencil"></i> </a>
-                </div>
-                <!-- fin de boton editar img -->
-            </div>
-        </div>
+    <li *ngIf="sgf.canActivate()">
+      <a
+        id="enviar"
+        class="main-menu__link fa-solid fa-arrow-right-from-bracket"
+        type="submit"
+        title="Cerrar Sesion"
+        (click)="offSesion($event)"
+      ></a>
+    </li>
+  </ul>
+
+  <!-- inicio del form login -->
+  <form
+    [formGroup]="form"
+    (ngSubmit)="onEnviar($event)"
+    class="container rounded bg-dark col-8 col-sm-4 col-md-3 col-xs-1 col-lg-2 position-absolute top-10 end-0 mb-2"
+  >
+    <div *ngIf="oculto">
+      <input
+        type="text"
+        placeholder="User"
+        formControlName="nombreUsuario"
+        class="form-control mb-2 mt-2"
+        id="usuario"
+      />
+      <div *ngIf="User?.errors && User?.touched">
+        <p *ngIf="User?.hasError('required')" class="text-danger m-2">
+          El usuario es requerido.
+        </p>
+        <p
+          *ngIf="User?.errors?.['minlength']"
+          class="text-danger font-weight-bold"
+        >
+          Ingresa más de 8 caracteres.
+        </p>
+      </div>
+      <input
+        type="password"
+        placeholder="contraseña"
+        formControlName="password"
+        class="form-control mb-2"
+        id="password"
+      />
+      <div *ngIf="Password?.errors && Password?.touched">
+        <p *ngIf="Password?.hasError('required')" class="text-danger m-2">
+          La contraseña es requerida.
+        </p>
+        <p
+          *ngIf="Password?.errors?.['minlength']"
+          class="text-danger font-weight-bold"
+        >
+          Ingresa más de 8 caracteres.
+        </p>
+      </div>
+      <button type="submit" class="btn m-2 btn-outline-light btn-hover-sesion">
+        Iniciar Sesión
+      </button>
+      <button
+        type="submit"
+        class="btn m-2 btn-outline-light btn-hover-sesion"
+        *ngIf="sgf.canActivate()"
+        (click)="offSesion($event)"
+      >
+        Cerrar Sesión
+      </button>
     </div>
+  </form>
+  <!-- fin del form login -->
 </div>
 
-  <!-- spinner doble para que sea mas bonito -->
-  <ngx-spinner type="ball-spin-clockwise"></ngx-spinner>
-  <ngx-spinner bdColor="rgba(51,51,51,0.8)"
+<div class="container-flex">
+  <div #img1>
+    <!--IMAGEN REPRESENTATIVA le di background usando @viewchild en ts -->
+
+    <a
+      *ngIf="sgf.canActivate() && miPortfolio.imgRepresentativa != null"
+      class="btn btn-outline-light align-self-start botonEdit__represent"
+      role="button"
+      data-bs-target="#representModal"
+      data-bs-toggle="modal"
+      ><i class="fa-solid fa-pencil"></i
+    ></a>
+    <div class="container-fluid d-flex justify-content-center">
+      <div class="">
+        <h1 class="text-center text-white display-5 titulo mt-3">
+          Claudio Miguel Olivera González
+        </h1>
+        <h2 class="text-center text-white display-6 titulo">
+          Full Stack Developer Junior
+        </h2>
+        <!-- NOTA: Podria haber utilizado mas las interpolaciones con los datos correspondientes, pero preferí no hacerlo, ya que por ejemplo para el nombre que se encuentra aqui queria que se viera siempre independientemente de que llegara o no el dato de la db (evitando asi que quedara el espacio vacío en caso de que no hubiera dato.) -->
+      </div>
+    </div>
+
+    <div class="container-flex">
+      <div class="d-flex justify-content-center">
+        <img
+          class="img-Perfil rounded-circle mb-4 align-self-center"
+          *ngIf="miPortfolio.imgPerfil != null"
+          src="{{ miPortfolio.imgPerfil }}"
+        />
+        <!--inico del boton editar img-->
+        <div class="d-flex justify-content-center position-absolute">
+          <a
+            *ngIf="sgf.canActivate() && miPortfolio.imgPerfil != null"
+            class="align-self-center btn btn-outline-light hover__boton"
+            role="button"
+            data-bs-target="#exampleModal"
+            data-bs-toggle="modal"
+            ><i class="fa-solid fa-pencil"></i>
+          </a>
+        </div>
+        <!-- fin de boton editar img -->
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- spinner doble para que sea mas bonito (ngx-spinner)-->
+<ngx-spinner type="ball-spin-clockwise"></ngx-spinner>
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
   size="medium"
   color="#02f789"
-  type="ball-spin-clockwise">
-  <p style="font-size: 20px; color: white">Cargando...</p>></ngx-spinner>
-  <!-- fin spinner -->
+  type="ball-spin-clockwise"
+>
+  <p style="font-size: 20px; color: white">Cargando...</p>
+  ></ngx-spinner
+>
+<!-- fin spinner -->
 
 <!-- ############################ INICIO DE MODALES #################################################### -->
 
-    <!-- inicio modal editar imagen -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Cambiar Imagen</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <input class="div-acercaDe mt-2 ms-2 rounded" type="file" alife-file-to-base64
-                        (onFileChanged)="onFileChanged($event)" accept=".png, .jpg, .jpeg">
-                </div>
-                <div class="modal-footer">
-                    <p *ngIf="noTieneContenido" class="text-danger">{{mensajeDeError}}</p>
-                    <p class="text-success">{{mensajeDeEnvio}}</p>
-                    <button type="button" class="btn btn-success" (click)="editarImgPerf()">Enviar</button>
-                </div>
-            </div>
-        </div>
+<!-- inicio modal editar imagen perfil-->
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cambiar Imagen</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <input
+          class="div-acercaDe mt-2 ms-2 rounded"
+          type="file"
+          alife-file-to-base64
+          (onFileChanged)="onFileChanged($event)"
+          accept=".png, .jpg, .jpeg"
+        />
+      </div>
+      <div class="modal-footer">
+        <p *ngIf="noTieneContenido" class="text-danger">{{ mensajeDeError }}</p>
+        <p class="text-success">{{ mensajeDeEnvio }}</p>
+        <button type="button" class="btn btn-success" (click)="editarImgPerf()">
+          Enviar
+        </button>
+      </div>
     </div>
+  </div>
+</div>
 
-
-    <!--inicio modal editar imagen representativa -->
-    <div class="modal fade" id="representModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Cambiar Imagen Representativa</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <input class="div-acercaDe mt-2 ms-2 rounded" type="file" alife-file-to-base64
-                        (onFileChanged)="onFileChanged($event)" accept=".png, .jpg, .jpeg">
-                </div>
-                <div class="modal-footer">
-                    <p *ngIf="noTieneContenido" class="text-danger">{{mensajeDeError}}</p>
-                    <p class="text-success">{{mensajeDeEnvio}}</p>
-                    <button type="button" class="btn btn-success" (click)="editarImgRepresentativa()">Enviar</button>
-                </div>
-            </div>
-        </div>
+<!--inicio modal editar imagen representativa -->
+<div
+  class="modal fade"
+  id="representModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">
+          Cambiar Imagen Representativa
+        </h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <input
+          class="div-acercaDe mt-2 ms-2 rounded"
+          type="file"
+          alife-file-to-base64
+          (onFileChanged)="onFileChanged($event)"
+          accept=".png, .jpg, .jpeg"
+        />
+      </div>
+      <div class="modal-footer">
+        <p *ngIf="noTieneContenido" class="text-danger">{{ mensajeDeError }}</p>
+        <p class="text-success">{{ mensajeDeEnvio }}</p>
+        <button
+          type="button"
+          class="btn btn-success"
+          (click)="editarImgRepresentativa()"
+        >
+          Enviar
+        </button>
+      </div>
     </div>
+  </div>
+</div>
