--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,29 +1,31 @@
-    <footer class="bg-dark text-center text-white mt-3">
-        <div class="container p-4 pb-0">
-          <section class="mb-4">
-        
-            <!-- Instagram -->
-            <!-- <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="#!" role="button"
+<footer class="bg-dark text-center text-white mt-3">
+  <div class="container p-4 pb-0">
+    <section class="mb-4">
+
+      <!-- Instagram -->
+      <!-- <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="#!" role="button"
               ><i class="fab fa-instagram"></i
             ></a> -->
-      
-            <!-- Linkedin -->
-            <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="https://www.linkedin.com/in/claudio-miguel-olivera-gonzalez/" role="button" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      
-            <!-- Github -->
-              <a class="btn btn-outline-light btn-floating m-1 hover__boton"  href="https://github.com/Claudio-Olivera/" role="button" target="_blank"><i class="fab fa-github"></i></a>
 
-            <!-- Whatsapp -->
-              <a class="btn btn-outline-light btn-floating m-1 hover__boton"  href="https://wa.me/5492984788433" target="_blank" role="button"
-              ><i class="fab fa-whatsapp"></i></a>
-              
-          </section>
-        </div>
+      <!-- Linkedin -->
+      <a class="btn btn-outline-light btn-floating m-1 hover__boton"
+        href="https://www.linkedin.com/in/claudio-miguel-olivera-gonzalez/" role="button" target="_blank"><i
+          class="fab fa-linkedin-in"></i></a>
 
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          General Roca, provincia de Rio Negro, Argentina, 2022
-          <p class="text-white">Sitio realizado por:<br/> Claudio Olivera González</p>
-        </div>
-      
-      </footer>
+      <!-- Github -->
+      <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="https://github.com/Claudio-Olivera/"
+        role="button" target="_blank"><i class="fab fa-github"></i></a>
 
+      <!-- Whatsapp -->
+      <a class="btn btn-outline-light btn-floating m-1 hover__boton" href="https://wa.me/5492984788433" target="_blank"
+        role="button"><i class="fab fa-whatsapp"></i></a>
+
+    </section>
+  </div>
+
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    General Roca, provincia de Rio Negro, Argentina, 2022
+    <p class="text-white">Sitio realizado por:<br /> Claudio Olivera González</p>
+  </div>
+
+</footer>
