--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -88,7 +88,7 @@
           
           </textarea>
           Imagen del Proyecto
-          <input class="div-acercaDe mt-2 ms-2 rounded" type="file" alife-file-to-base64
+          <input class=" mt-2 ms-2 rounded" type="file" alife-file-to-base64
           (onFileChanged)="onFileChanged($event)" accept=".png, .jpg, .jpeg">
           <p *ngIf="noTieneContenido" class="text-danger">{{mensajeDeError}}</p>
           <p class="text-success">{{mensajeDeEnvio}}</p>
@@ -164,7 +164,7 @@ aria-hidden="true"
           [(ngModel)]="nuevoProyecto.proDescripcion"
           ></textarea>
           Imagen del Proyecto
-          <input class="div-acercaDe mt-2 ms-2 rounded" type="file" alife-file-to-base64
+          <input class=" mt-2 ms-2 rounded" type="file" alife-file-to-base64
               (onFileChanged)="onFileChanged($event)" accept=".png, .jpg, .jpeg">
         </p>
     </div>
