--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,49 +1,80 @@
+<div class="container">
+  <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
+    <h3 class="h3-titulos pt-4 ps-4 display-6 text-left">Acerca de mi</h3>
 
-   <div class="container">
-     <article class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
-       <h3 class="h3-titulos pt-4 ps-4 display-6 text-left">Acerca de mi</h3>
+    <div class="text-center" *ngIf="guard.canActivate()">
+      <a class="btn btn-outline-light hover__boton" role="button" data-bs-target="#acercaDeModal" data-bs-toggle="modal"
+        (click)="editar()"><i class="fa-solid fa-pencil"></i></a>
+    </div>
 
-       <div class="text-center" *ngIf="SGguard.canActivate()"> 
-         <a class=" btn btn-outline-light  hover__boton"  role="button" data-bs-target="#acercaDeModal" data-bs-toggle="modal"  (click)="editar()"><i class="fa-solid fa-pencil" ></i></a>      
-        </div>
+    <div class="container d-flex flex-column">
+      <p class="row-2 text-white text-parrafos">{{ miPortfolio.sobremi }}</p>
 
-       <div class="container d-flex flex-column" >
-          <p class="row-2 text-white text-parrafos">{{miPortfolio.sobremi}}
-          </p>  
-          
-          <!-- NOTA: Podria haber utilizado mas las interpolaciones con los datos correspondientes, pero preferí no hacerlo, ya que por ejemplo para el nombre que se encuentra en header component queria que se viera siempre independientemente de que llegara o no el dato de la db (evitando asi que quedara el campo vacío en caso de que no hubiera dato.) -->
-          <a class="h3-acercaDe text-center " href="{{miPortfolio.urlCV}}" target="_blank">Ver Currículum Vitae</a>
-            <p class="row-2 text-white text-parrafos" *ngIf="miPortfolio.email!=null" >Email: {{miPortfolio.email}}
-            </p> 
-            <p class="row-2 text-white text-parrafos" *ngIf="miPortfolio.telefono!=null" >Celular: {{miPortfolio.telefono}}
-            </p>
-          </div>
-      </article>
-  </div>
-  <div  class="modal fade" id="acercaDeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Editar Datos Personales</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      <!-- NOTA: Podria haber utilizado mas las interpolaciones con los datos correspondientes, pero preferí no hacerlo, ya que por ejemplo para el nombre que se encuentra en header component queria que se viera siempre independientemente de que llegara o no el dato de la db (evitando asi que quedara el campo vacío en caso de que no hubiera dato.) -->
+      <a class="h3-acercaDe text-center" href="{{ miPortfolio.urlCV }}" target="_blank">Ver Currículum Vitae</a>
+      <p class="row-2 text-white text-parrafos" *ngIf="miPortfolio.email != null">
+        Email: {{ miPortfolio.email }}
+      </p>
+      <p class="row-2 text-white text-parrafos" *ngIf="miPortfolio.telefono != null">
+        Celular: {{ miPortfolio.telefono }}
+      </p>
+    </div>
+  </article>
+</div>
+<div class="modal fade" id="acercaDeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">
+          Editar Datos Personales
+        </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <p class="form-control">
+            Escribe tus nombres
+            <input class="form-control" type="text" [(ngModel)]="editarAcerca.nombres" />
+          </p>
+          <p class="form-control">
+            Escribe tus apellidos
+            <input class="form-control" type="text" [(ngModel)]="editarAcerca.apellidos" />
+          </p>
+          <p class="form-control">
+            Escribe tu email
+            <input class="form-control" type="text" [(ngModel)]="editarAcerca.email" />
+          </p>
+          <p class="form-control">
+            Escribe tu ocupación
+            <input class="form-control" type="text" [(ngModel)]="editarAcerca.ocupacion" />
+          </p>
+          <p class="form-control">
+            Escribe tu fecha de nacimiento
+            <input class="form-control" type="text" [(ngModel)]="editarAcerca.fechaNacimiento" />
+          </p>
+          <p class="form-control">
+            Coloca tu link del C.V
+            <input class="form-control" type="text" [(ngModel)]="editarAcerca.urlCV" />
+          </p>
+          <p class="form-control">
+            Escribe tu número de teléfono
+            <input class="form-control" type="text" [(ngModel)]="editarAcerca.telefono" />
+          </p>
+          <p class="form-control">
+            Escribe sobre tí
+            <textarea class="form-control" rows="8" [(ngModel)]="editarAcerca.sobremi"></textarea>
+          </p>
         </div>
-        <div class="modal-body">
-          <div class="container-fluid">
-          <p class="form-control" >Escribe tus nombres <input class="form-control" type="text" [(ngModel)]="editarAcerca.nombres" ></p>
-          <p class="form-control" >Escribe tus apellidos <input class="form-control" type="text" [(ngModel)]="editarAcerca.apellidos" ></p> 
-          <p class="form-control" >Escribe tu email <input class="form-control" type="text" [(ngModel)]="editarAcerca.email" ></p>
-          <p class="form-control" >Escribe tu ocupación <input  class="form-control" type="text" [(ngModel)]="editarAcerca.ocupacion" ></p> 
-          <p class="form-control" >Escribe tu fecha de nacimiento <input  class="form-control" type="text" [(ngModel)]="editarAcerca.fechaNacimiento"></p>
-          <p class="form-control" >Coloca tu link del C.V <input  class="form-control" type="text" [(ngModel)]="editarAcerca.urlCV"></p>
-          <p class="form-control" >Escribe tu número de teléfono <input  class="form-control" type="text" [(ngModel)]="editarAcerca.telefono"></p> 
-          <p class="form-control" >Escribe sobre tí <textarea class="form-control" rows="8" [(ngModel)]="editarAcerca.sobremi" ></textarea></p>  
-        </div>    <!-- NOTA: Acá decidí hacer el modal pensando en que alguien mas rellenara los campos, aunque al ser de uso personal mio no tiene mucho sentido,pero decidi dejarlo asi, por eso las frases estan hablando refiriendose a alguien mas, y no a mi mismo. -->
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-success" (click)="editarDatos()">Enviar</button>
-          <button type="button" class="btn btn-danger" (click)="eliminarDatos()">Borrar</button>
-        </div>
+        <!-- NOTA: Acá decidí hacer el modal pensando en que alguien mas rellenara los campos, aunque al ser de uso personal mio no tiene mucho sentido,pero decidi dejarlo asi, por eso las frases estan hablando refiriendose a alguien mas, y no a mi mismo. -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" (click)="editarDatos()">
+          Enviar
+        </button>
+        <button type="button" class="btn btn-danger" (click)="eliminarDatos()">
+          Borrar
+        </button>
       </div>
     </div>
   </div>
-
+</div>
