--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,58 +1,37 @@
 <div class="container">
-<div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
+  <div class="container-fluid col-sm-12 col-12 mx-auto card mb-3 bg-dark">
+    <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-2 mt-1">Experiencia
+      <a class="btn btn-outline-light agregar__boton mb-3" role="button" title="Agregar Información"
+        data-bs-target="#ExperienciaModalNuevo" data-bs-toggle="modal" *ngIf="guard.canActivate()"><i
+          class="fa-solid fa-square-plus"></i></a>
+    </h3>
 
-  <h3 class="h3-titulos pt-4 ps-4 display-6 text-left mb-2 mt-1">Experiencia
-      <a
-      class="btn btn-outline-light agregar__boton mb-3"
-      role="button"
-       title="Agregar Información"
-      data-bs-target="#ExperienciaModalNuevo"
-      data-bs-toggle="modal"
-      *ngIf="SGguard.canActivate()"
-      ><i class="fa-solid fa-square-plus"></i
-        ></a>
-  </h3>
-    
     <!--==== Inicio de Experiencia ..==== -->
-    
-    
     <div *ngFor="let listas of miPortfolio">
       <div *ngFor="let miPortfolio of listas">
-        
-        
+        <input [(ngModel)]="miPortfolio.id" #identificador style="display: none;"><br>
 
-          <input [(ngModel)]="miPortfolio.id" #identificador style="display: none;"><br> <!-- esta linea es para extraer el valor de x.id -->
- 
-            <h4 class="h3-acercaDe text-center mt-3">{{miPortfolio.empleo}}
-
-            
-                <a class=" btn btn-outline-light hover__boton"  role="button" data-bs-target="#ExperienciaModal" data-bs-toggle="modal" *ngIf="SGguard.canActivate()" (click)="editar(identificador.value,miPortfolio.empleo,miPortfolio.descripcionEmpleo)" title="Editar Tarjeta"><i class="fa-solid fa-pencil" ></i></a>
-           
-
-
-            </h4>
-            <div class="container d-flex flex-column">
-              
-              <p class="row-2 text-white text-parrafos">
-                {{miPortfolio.descripcionEmpleo}}
-                <br/>
-              </p>  
-            </div>
-            
-            <!-- Inicio boton editar Experiencia--> 
-           
-       
-            <!-- final boton editar experiencia-->
-            
-
-
+        <h4 class="h3-acercaDe text-center mt-3">{{miPortfolio.empleo}}
+          <a class=" btn btn-outline-light hover__boton" role="button" data-bs-target="#ExperienciaModal"
+            data-bs-toggle="modal" *ngIf="guard.canActivate()"
+            (click)="editar(identificador.value,miPortfolio.empleo,miPortfolio.descripcionEmpleo)"
+            title="Editar Tarjeta"><i class="fa-solid fa-pencil"></i></a>
+        </h4>
+        <div class="container d-flex flex-column">
+          <p class="row-2 text-white text-parrafos">
+            {{miPortfolio.descripcionEmpleo}}
+            <br />
+          </p>
+        </div>
+        <!-- Inicio boton editar Experiencia-->
+        <!-- final boton editar experiencia-->
       </div>
-      </div>
+    </div>
 
-        <!--======= Fin de Experiencia..======= -->
+    <!--======= Fin de Experiencia..======= -->
 
     <!-- Inicio MODAL editar Experiencia-->
-    <div  class="modal fade" id="ExperienciaModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="ExperienciaModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
@@ -61,73 +40,52 @@
           </div>
           <div class="modal-body">
             <div class="container-fluid">
-            <p class="form-control" >El cargo ocupado <input class="form-control" type="text" [(ngModel)]="editarExperiencia.empleo"  >Breve detalle de tu cargo  <textarea class="form-control" rows="4" [(ngModel)]="editarExperiencia.descripcionEmpleo" ></textarea></p>  
-
-        
-          </div><!-- div del for  -->
+              <p class="form-control">El cargo ocupado <input class="form-control" type="text"
+                  [(ngModel)]="editarExperiencia.empleo">Breve detalle de tu cargo <textarea class="form-control"
+                  rows="4" [(ngModel)]="editarExperiencia.descripcionEmpleo"></textarea></p>
+            </div><!-- div del for  -->
           </div><!-- div del for -->
 
           <div class="modal-footer">
-
-            <button type="button" class="btn btn-success fa-solid fa-floppy-disk" title="Guardar Cambios" (click)="editarExp()"><!-- Enviar --></button>
-
-
-            <button type="button" class="btn btn-danger fa-solid fa-trash-can" title="Borrar Tarjeta" (click)="eliminarExp()"><!-- Borrar --></button>
-
+            <button type="button" class="btn btn-success fa-solid fa-floppy-disk" title="Guardar Cambios"
+              (click)="editarExp()">
+              <!-- Enviar -->
+            </button>
+            <button type="button" class="btn btn-danger fa-solid fa-trash-can" title="Borrar Tarjeta"
+              (click)="eliminarExp()">
+              <!-- Borrar -->
+            </button>
           </div>
         </div>
       </div>
     </div>
     <!-- FINAL MODAL editar Experiencia-->
-
   </div>
 </div> <!-- fin de div contenedor de todo Experiencia. -->
 
 <!-- Inicio MODAL crear Experiencia -->
-<div
-class="modal fade"
-id="ExperienciaModalNuevo"
-tabindex="-1"
-aria-labelledby="exampleModalLabel"
-aria-hidden="true"
->
-<div class="modal-dialog modal-dialog-centered">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">
-       Agregar Experiencia
-      </h5>
-      <button
-      type="button"
-      class="btn-close"
-      data-bs-dismiss="modal"
-      aria-label="Close"
-      ></button>
-  </div>
-  <div class="modal-body">
-    <div class="container-fluid">
-      <p class="form-control">
-        Cargo Ocupado<input
-        class="form-control"
-        type="text"
-        [(ngModel)]="nuevoExperiencia.empleo"
-        />Descripcion del Empleo/Tareas realizadas
-
-        <textarea
-        class="form-control"
-        rows="4"
-        [(ngModel)]="nuevoExperiencia.descripcionEmpleo"
-        ></textarea>
-
+<div class="modal fade" id="ExperienciaModalNuevo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">
+          Agregar Experiencia
+        </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <p class="form-control">
+            Cargo Ocupado<input class="form-control" type="text" [(ngModel)]="nuevoExperiencia.empleo" />Descripcion del
+            Empleo/Tareas realizadas
+            <textarea class="form-control" rows="4" [(ngModel)]="nuevoExperiencia.descripcionEmpleo"></textarea>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success fa-solid fa-floppy-disk" title="Guardar" (click)="agregarExp()">
+          <!--      Enviar -->
+        </button>
+      </div>
     </div>
   </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-success fa-solid fa-floppy-disk" title="Guardar"(click)="agregarExp()">
- <!--      Enviar -->
-    </button>
-    
-  
-</div>
-</div>
-</div>
 </div>
