--- a/src/styles.css
+++ b/src/styles.css
@@ -1,106 +1,45 @@
 /* global styles */
-.body{
-    background-color: #343A40;
-    background-size: 100% 100%;
-  }
+.body {
+  background-color: #343a40;
+  background-size: 100% 100%;
+}
 
-  .section-acercaDe .div-acercaDe {
-    -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-            box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(15px);
-    background-color: rgb(40, 40, 40);
-  }
+.h3-acercaDe {
+  color: rgb(2, 247, 137);
+  font-family: "Poppins", sans-serif;
+  font-weight: lighter;
+  font-size: 30px;
+}
+.h3-titulos {
+  color: rgb(2, 247, 137);
+  font-family: "Poppins", sans-serif;
+  font-weight: bolder;
+}
 
-  .section-acercaDe .div-acercaDe .p-experiencia {
-    padding: 0px 20px 10px 40px;
-    color: #ffffff;
-    font-family: 'Poppins', sans-serif;
-  }
-
-  @media screen and (max-width: 3500px){
-    .section-acercaDe .div-acercaDe {
-      width: 70%;
-    }
-  }
-  
-  .h3-acercaDe {
-    color: rgb(2, 247, 137);
-    font-family: 'Poppins', sans-serif;
-    font-weight:lighter;
-    font-size: 30px;
-  }
-  .h3-titulos {
-    color: rgb(2, 247, 137);
-    font-family: 'Poppins', sans-serif;
-    font-weight: bolder;
-  }
-
-.text-parrafos{
+.text-parrafos {
   font-size: 25px;
 }
 @media screen and (max-width: 600px) {
-  .text-parrafos{
-    font-size:medium;
+  .text-parrafos {
+    font-size: medium;
+  }
+}
+@media screen and (max-width: 800px) {
+  .h3-acercaDe {
+    font-size: 110%;
   }
 }
 
-  @media screen and (max-width: 1100px) {
-    .h3-acercaDe {
-      text-align: center;
-      font-size: 20px;
-    }
+@media screen and (max-width: 1100px) {
+  .h3-acercaDe {
+    text-align: center;
+    font-size: 20px;
   }
-  @media screen and (max-width: 800px) {
-    .h3-acercaDe {
-      font-size: 110%;
-    }
-  }
+}
 
-  @media screen and (max-width: 1100px) {
-    .h3-titulos{
-      text-align: center;
-      margin-left: -3% !important;
-    }
+@media screen and (max-width: 1100px) {
+  .h3-titulos {
+    text-align: center;
+    margin-left: -3% !important;
   }
-  .section-acercaDe .div-acercaDe .p-acercaDe {
-    padding: 20px 20px 20px 40px;
-     color: rgb(2, 247, 137); 
-    font-family: 'Poppins', sans-serif;
-  }
-  @media screen and (max-width: 500px) {
-    .section-acercaDe .div-acercaDe .p-acercaDe {
-      font-size: 100%;
-    }
-  }
-  @media screen and (max-width: 300px) {
-    .section-acercaDe .div-acercaDe .p-acercaDe {
-      font-size: 100%;
-      width: 600px;
-    }
-  }
-  @media screen and (min-width: 1100px) {
-    .section-acercaDe .div-acercaDe .p-acercaDe,.section-acercaDe .div-acercaDe .p-experiencia {
-      font-size: 140%;
-    }
-  }
-
-  @media screen and (min-width: 340px) {
-    .section-acercaDe .div-acercaDe .p-acercaDe,.section-acercaDe .div-acercaDe .p-experiencia {
-      display:row;
-      line-height: 23px;
-      text-decoration: none;
-      text-align: left;
-      margin-left:-30px ;
-      font-size: 140%; 
-      height: 100%;
-    }
-  }
-  
-  @media screen and (max-width: 340px) {
-    .section-acercaDe .div-acercaDe .p-experiencia, .section-acercaDe .div-acercaDe .p-acercaDe {
-      padding: 5px !important;
-
-    }
-  }
-
-  
+}
